# fortemi

./: .dockerignore  .env.example  .env.workstation.example  .gitignore  .mcp.json  AGENTS.md  AGENTS.override.md  AIWG.md  BSL-LICENSE  CHANGELOG.md  CLAUDE.md  CLAUDE.md.backup-20260418-135458  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.bundle  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_113.md  LICENSE  LICENSE.txt  NOTICE  QUICKSTART.md  README.md  RELEASE_READINESS.md  SEARCH_DEDUP_CHANGES.md  SETUP.md  TICKET_131_OPENROUTER_HEADERS.md  TICKET_149_STRICT_TAG_FILTER_INTEGRATION.md  VERIFICATION_CHECKLIST.md  WORKSTATION-SETUP.md  apply_search_dedup.patch  backup_20260116_151532.sql  backup_20260116_185836.sql  deny.toml  docker-compose.bundle.yml  docker-compose.intel.yml  docker-compose.llamacpp.yml  docker-compose.minimal.yml  docker-compose.whisper.yml  docker-compose.workstation.yml  (+11 more)
crates/matric-api/: Cargo.toml  oauth-profiles.json
crates/matric-api/src/: handlers.rs  lib.rs  main.rs  main.rs.backup  main.rs.bak  oauth_profile.rs  openapi.yaml  query_types.rs  route_policy.rs  search_dedup.rs  shard_signature.rs  trusted_proxy.rs
crates/matric-api/tests/: analytics_memory_attachments_archive_routing_test.rs  archive_job_pipeline_test.rs  archive_schema_routing_test.rs  archive_template_routing_test.rs  archive_version_metadata_test.rs  archives_api_test.rs  auth_middleware_test.rs  backup_api_test.rs  bulk_create_api_behavior_test.rs  bulk_create_content_validation_test.rs  bulk_diacritics_simple_test.rs  cargo_metadata_test.rs  chat_contract_test.rs  chat_stream_contract_test.rs  chunking_integration_test.rs  cors_security_test.rs  create_note_empty_content_integration_test.rs  empty_content_validation_test.rs  header_safety_tests.rs  health_versioning_api_test.rs  hmac_signing_test.rs  incoming_webhook_contract_test.rs  ingest_stream_contract_test.rs  list_endpoints_pagination_test.rs  list_notes_limit_zero_test.rs  note_chunking_integration_test.rs  oauth_introspect_test.rs  pagination_metadata_test.rs  reconstruction_endpoint_test.rs  reconstruction_service_integration_test.rs  shard_manifest_migration_metadata_test.rs  shard_schema_2_interop_receipt_test.rs  shard_schema_2_receipt_test.rs  skos_error_messages_test.rs  skos_search_api_test.rs  strict_filter_integration_test.rs  strict_filter_search_test.rs  update_note_not_found_test.rs  validation_fixes_test.rs
crates/matric-core/: Cargo.toml
crates/matric-core/src/: asyncapi.rs  audit.rs  authorization.rs  captions.rs  collection_filter.rs  defaults.rs  embedding_contract.rs  embedding_provider.rs  error.rs  events.rs  exif.rs  fair.rs  file_safety.rs  hardware.rs  lib.rs  logging.rs  metering.rs  models.rs  models.rs.backup  models.rs.bak  search.rs  strict_filter.rs  tags.rs  temporal.rs  tokenizer.rs  traits.rs  uuid_utils.rs
crates/matric-core/tests/: agentic_config_test.rs  agentic_document_types_test.rs  chunking_defaults_test.rs  shard_downgrade_upgrade_test.rs
crates/matric-crypto/: Cargo.toml
crates/matric-crypto/src/: cipher.rs  detect.rs  e2e.rs  error.rs  format.rs  kdf.rs  lib.rs  standard.rs
crates/matric-crypto/tests/: PKE_TEST_DOCUMENTATION.md  QUICK_START.md  TEST_SUMMARY.md  pke_integration_test.rs
crates/matric-db/: Cargo.toml  QUICK_TEST_GUIDE.md
crates/matric-db/migrations/: 001_initial_schema.sql  002_oauth.sql  003_native_uuidv7.sql
crates/matric-db/src/: archives.rs  call_sessions.rs  chunking.rs  colbert.rs  collections.rs  document_types.rs  embedding_sets.rs  embeddings.rs  file_storage.rs  hashtag_extraction.rs  inbound_sources.rs  incoming_webhooks.rs  jobs.rs  lib.rs  links.rs  memory_search.rs  notes.rs  oauth.rs  outbox.rs  pke_keys.rs  pke_keysets.rs  pool.rs  provenance.rs  schema_context.rs  schema_validation.rs  search.rs  skos_tags.rs  skos_tags_tx.rs  strict_filter.rs  syntactic_chunker.rs  tags.rs  templates.rs  test_fixtures.rs  tus.rs  unified_filter.rs  usage_ledger.rs  versioning.rs  webhooks.rs
crates/matric-db/tests/: CHUNKING_TEST_GUIDE.md  SKOS_HIERARCHY_TEST_DOCUMENTATION.md  archive_schema_test.rs  backup_restore_e2e_test.rs  chunking_integration_test.rs  code_embedding_config_test.rs  document_type_on_notes_test.rs  embedding_set_crud_test.rs  embedding_set_delete_test.rs  embedding_set_id_test.rs  feb_to_current_migration_gate.rs  file_storage_blob_refcount_test.rs  has_revision_test.rs  inline_hashtag_extraction_test.rs  inline_hashtag_integration_test.rs  job_retry_lifecycle_test.rs  job_strict_parsing_test.rs  linking.rs  list_query_builder_test.rs  memory_search_test.rs  n_plus_one_query_test.rs  schema_context_integration.rs  skos_hierarchy_test.rs  tag_case_sensitivity_test.rs  tag_soft_delete_test.rs  text_search_config_test.rs
crates/matric-inference/: Cargo.toml  RAW_MODE.md
crates/matric-inference/examples/: openrouter_headers.rs  raw_mode_demo.rs
crates/matric-inference/src/: capabilities.rs  circuit_breaker.rs  config.rs  diagnostics.rs  diarization.rs  discovery.rs  embedding_models.rs  eval.rs  few_shot.rs  gliner.rs  hardware.rs  latency.rs  lib.rs  link_types.rs  mock.rs  model_config.rs  ollama.rs  profiles.rs  provider.rs  provider_profiles.rs  refinement.rs  retry.rs  selector.rs  thinking.rs  transcription.rs  vision.rs
crates/matric-inference/tests/: openai_integration_test.rs  openrouter_headers_test.rs
crates/matric-jobs/: Cargo.toml
crates/matric-jobs/examples/: poc_consumer.rs  poc_outbox.rs
crates/matric-jobs/src/: attachment_scan.rs  audio_chunk_handler.rs  audio_transcription_handler.rs  diarization_handler.rs  extraction.rs  extraction_handler.rs  handler.rs  keyframe_assembly_handler.rs  keyframe_character_vision_handler.rs  keyframe_setting_vision_handler.rs  keyframe_vision_handler.rs  lib.rs  media_optimize_handler.rs  media_usage.rs  pause.rs  relabel_handler.rs  sidecar.rs  sprite_handler.rs  view_assembly_handler.rs  view_vision_handler.rs  worker.rs
crates/matric-jobs/tests/: README.md  attachment_scan_handler_test.rs  schema_context_test.rs  (+2 more)
crates/matric-search/: Cargo.toml
(+1639 files in other folders)
