[package]
name = "matric-inference"
description = "LLM inference backend abstraction for matric-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# Internal
matric-core.workspace = true

# HTTP client
reqwest.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true

# Async
tokio.workspace = true
async-trait.workspace = true

# Logging
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
wiremock = "0.6"

[features]
default = ["ollama"]
ollama = []
openai = []
# Enable integration tests that require live Ollama server
integration = []
