[package]
name = "matric-jobs"
description = "Background job queue system for matric-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
# Internal
matric-core.workspace = true
matric-db.workspace = true
matric-inference.workspace = true

# Database
sqlx.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Types
uuid.workspace = true
chrono.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Async
tokio = { workspace = true, features = ["process"] }
async-trait.workspace = true
futures.workspace = true

# Logging
tracing.workspace = true

# HTTP client
reqwest.workspace = true

# File handling
tempfile = "3"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
